--- a/views/mtg.html
+++ b/views/mtg.html
@@ -7,6 +7,7 @@
 	<meta name="google-signin-client_id" content="1035011540407-0t8uan7semme0s2cq7kph8rokgkkjb0f.apps.googleusercontent.com">
 	<meta name="google-signin-cookiepolicy" content="single_host_origin">
 	<meta name="google-signin-scope" content="profile email">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<title>Magic the Console</title>
 	<!-- google icons (like fontawesome) -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -83,7 +84,7 @@
 	<!-- main content area -->
 	<main>
 		<div class="row">
-			
+
 		</div>
 		<div class="row">
 			<section id="mainArea" class="col s6">
